--- a/main/static/main/css/login.css
+++ b/main/static/main/css/login.css
@@ -29,7 +29,7 @@
   }
   
   
-  .form-box{
+  .input-dj{
     position: relative;
     width: 400px;
     height: 400px;
@@ -41,6 +41,24 @@
     justify-content: center;
     align-items: center;
   }
+
+  /* .form-value{
+    position: relative;
+    width: 400px;
+    height: 400px;
+    background: transparent;
+    border: 2px solid rgba(255,255,255,0.5);
+    border-radius: 20px;
+    backdrop-filter: blur(5px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  } */
+
+  /* .form-box {
+    background: transparent;
+    border: 2px solid rgba(255,255,255,0.5);
+  } */
   
   .form-box.error {
     
@@ -85,20 +103,7 @@
     color: black;
   }
   
-  /* .inputbox label{
-    position: absolute;
-    top: 50%;
-    left: 5px;
-    color: black;
-    font-size: 1.5em;
-    pointer-events: none;
-    margin-bottom: 10px;
-  } */
   
-  /* input:focus ~ label,
-  input:focus ~ :valid{
-    background: transparent; 
-  } */
   
   .log-in{
     width: 100%;
@@ -112,43 +117,4 @@
     font-weight: 600;
     margin-top: 10px;
   }
-  
-  
-  
-  /* body{
-    overflow: hidden;
-    height: 100vh;
-  
-  }
-  
-  
-  main{
-    color: black;
-    height: calc(100vh - 70px);
-    display: flex;
-    
-    
-    justify-content: center;
-    background-color: #454545;
-    background: url("imgs/forest.jpg")no-repeat;
-    background-position: center;
-    background-size: cover;
-  }
-  
-  .Title
-  {
-    margin-top: 20px;
-   width: 21%;
-    
-  }
-  
-  .Title h1{
-    font-size: 45px;
-    text-transform: uppercase;
-    letter-spacing: 0.5em;
-    position: absolute;
-    font-weight: 500;
-    text-align: center;
-  } */
-  
   
