--- a/main/static/main/css/login.css
+++ b/main/static/main/css/login.css
@@ -5,6 +5,7 @@
   }
   
   section{
+    
     display: flex;
     justify-content: center;
     align-items: center;
@@ -29,7 +30,7 @@
   }
   
   
-  .input-dj{
+  .form-box{
     position: relative;
     width: 400px;
     height: 400px;
@@ -42,23 +43,8 @@
     align-items: center;
   }
 
-  /* .form-value{
-    position: relative;
-    width: 400px;
-    height: 400px;
-    background: transparent;
-    border: 2px solid rgba(255,255,255,0.5);
-    border-radius: 20px;
-    backdrop-filter: blur(5px);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  } */
-
-  /* .form-box {
-    background: transparent;
-    border: 2px solid rgba(255,255,255,0.5);
-  } */
+  
+  
   
   .form-box.error {
     
