--- a/main/templates/main/main.html
+++ b/main/templates/main/main.html
@@ -24,7 +24,7 @@
       <label> <a href="" class="logo">Sandtale</a></label>
       <ul>
 
-        <li><a href="about_us"><button class="aboutUs-button">
+        <li><a href="main/about_us/"><button class="aboutUs-button">
     About us
   </button></a></li>
       
