--- a/main/static/main/css/login.css
+++ b/main/static/main/css/login.css
@@ -103,4 +103,21 @@
     font-weight: 600;
     margin-top: 10px;
   }
+
+  .logButton {
+    background-color: white;
+    color: black;
+    border: none;
+    height: 30px;
+    width: 100px;
+/*     border-color: white;
+    border-width: 1px;
+    border-style: solid; */
+    border-radius: 15px;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 15px;
+/*     margin-right: 15px; */
+    transition: opacity 0.33s;
+  }
   
