--- a/main/templates/main/about_us.html
+++ b/main/templates/main/about_us.html
@@ -20,7 +20,7 @@
 <body>
   <header>
     <nav>
-      <label> <a href="/main/" class="logo">Sandtale</a></label>
+      <label> <a href="/main" class="logo">Sandtale</a></label>
       <ul>
 
         <li><a href=""><button class="aboutUs-button">
