--- a/main/templates/main/main.html
+++ b/main/templates/main/main.html
@@ -40,7 +40,7 @@
         
         <div class="dream1">
           <div class="thumbnail">
-            <img src="{%static 'main/img/dreams/dream1.jpg'%}">
+            <a href="main/post/"><img src="{%static 'main/img/dreams/dream1.jpg'%}"> </a>
           </div>
           <div class="details">
             <div class="author">
