--- a/main/templates/main/about_us.html
+++ b/main/templates/main/about_us.html
@@ -27,7 +27,7 @@
               About us
             </button></a></li>
         
-        <li><a href="profile.html"><img src="{%static 'main/img/icons8-гость-мужчина-24.png'%}" height="24" width="24"></a></li>
+        <li><a href="/main/profile"><img src="{%static 'main/img/icons8-гость-мужчина-24.png'%}" height="24" width="24"></a></li>
       </ul>
     </nav>
   </header>
