--- a/main/templates/main/main.html
+++ b/main/templates/main/main.html
@@ -28,7 +28,7 @@
     About us
   </button></a></li>
       
-        <li> <div class="profile-pic"> <a href="profile.html"><img src="{%static 'main/img/icons8-гость-мужчина-24.png'%}" height="24" width="24"></a></div></li>
+        <li> <div class="profile-pic"> <a href="main/profile"><img src="{%static 'main/img/icons8-гость-мужчина-24.png'%}" height="24" width="24"></a></div></li>
       </ul>
     </nav>
   </header>
